--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "connect-session-sequelize": "^5.2.1",
-    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "dataloader-sequelize": "^1.7.0",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
